# DeepSearch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  Dockerfile  Makefile  README.md  dev.sh  docker-compose.yml  project-brief.md  pyproject.toml  vercel.json
.github/workflows/: auto-release.yml  ci.yml
app/: __init__.py  main.py
app/api/v1/: __init__.py  endpoints.py  schemas.py
app/core/: config.py  embeddings.py
app/models/: document.py
app/services/: faiss_index.py  ingest.py
deep-search-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
deep-search-ui/scripts/: download-vazirmatn.mjs
deep-search-ui/src/: index.css
deep-search-ui/src/components/: Result.tsx
deep-search-ui/src/pages/: Home.tsx
deep-search-ui/src/types/: search.ts
tests/: __init__.py  test_search.py
